--- a/clustercache-spring-boot-stater/pom.xml
+++ b/clustercache-spring-boot-stater/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.antelope</groupId>
+        <groupId>com.antelope.clustercache</groupId>
         <artifactId>antelope-clustercache-boot</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
@@ -14,9 +14,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.antelope</groupId>
+            <groupId>com.antelope.clustercache</groupId>
             <artifactId>clustercache-spring-boot-autoconfigure</artifactId>
             <version>${parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.xmemcached</groupId>
+            <artifactId>xmemcached</artifactId>
         </dependency>
     </dependencies>
 
